Added motor module (not finished yet) and fixed some stuff in io_service

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,15 @@
 VPATH = ../inc
-CXX = clang++
+CXX = g++
 CXXFLAGS = -Wall -g3 
-LDLIBS = 
-DEPS = i2c.hpp imu.hpp types.hpp 
-OBJ = i2c.o imu.o 
+LDLIBS = -lpigpio -lpthread -lrt
+DEPS = i2c.hpp imu.hpp types.hpp io_service.hpp
+OBJ = i2c.o imu.o io_service.o main.o
 
 %.o: %.cpp $(DEPS)
 	$(CXX) $(CFLAGS) -c -o $@ $<
 
 main: $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDLIBS)
     
 clean:
 	rm -rf *.o
