--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 VPATH = ../inc
 CXX = g++
 CXXFLAGS = -Wall -g3 
-LDLIBS = -lpigpio -lpthread -lrt
-DEPS = i2c.hpp imu.hpp types.hpp io_service.hpp
-OBJ = i2c.o imu.o io_service.o main.o
+LDLIBS = -lpthread
+DEPS = shell_if/shell_server.hpp shell_if/shell_client.hpp momentum_motor.hpp
+OBJ = shell_if/shell_server.o shell_if/shell_client.o momentum_motor.o main.o
 
 %.o: %.cpp $(DEPS)
 	$(CXX) $(CFLAGS) -c -o $@ $<
